--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,12 @@ ENDIF(NOT CMAKE_BUILD_TYPE)
 SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/opt/boost/")
 SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "/opt/boost/lib")
 
-FIND_PACKAGE(Boost)
-IF (Boost_FOUND)
-    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
-    ADD_DEFINITIONS( "-DHAS_BOOST" )
-    message("Boost Found!!")
-ENDIF()
+# FIND_PACKAGE(Boost)
+# IF (Boost_FOUND)
+#     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+#     ADD_DEFINITIONS( "-DHAS_BOOST" )
+#     message("Boost Found!!")
+# ENDIF()
 
 # Enable CTest
 include(CTest)
@@ -411,9 +411,9 @@ if(RDK_BUILD_PYTHON_WRAPPERS)
     message("nbval not found, disabling the jupyter tests")
   endif()
 
-# else(RDK_BUILD_PYTHON_WRAPPERS)
-#   find_package(Boost ${RDK_BOOST_VERSION} REQUIRED CONFIG)
-# endif(RDK_BUILD_PYTHON_WRAPPERS)
+else(RDK_BUILD_PYTHON_WRAPPERS)
+  find_package(Boost ${RDK_BOOST_VERSION})
+endif(RDK_BUILD_PYTHON_WRAPPERS)
 
 find_package(Eigen3)
 if(RDK_BUILD_DESCRIPTORS3D)
